syntax = "proto3";

package kvsPackage;

service Todo {
    rpc put(Item) returns (Item);
    rpc getKey(ItemSearch) returns (Item);
    rpc getAllKeys(voidNoParam) returns (Items);
    rpc getAllKeysStream(voidNoParam) returns (stream Item);

}

message voidNoParam {}

message Item {
    int32 key = 1;
    string value = 2;
}

message Items {
    repeated Item items = 1;
}

message ItemSearch{
    int32 key = 1;
}